--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello World</title>
+<title>About Me</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 class="reverse">Hello World</h1>
+<h1 class="reverse">about me</h1>
 <p>
-Here is a paragraph that contains a few sentences of content.
+My favorite things to do are watch Netflix, read books, eat, and online shop. Sadly, those are about the only hobbies I have. My favorite places in the world are my bedroom and the bookstore. I like opossums because they are cute, and so are hairless dogs and cats.
 </p>
+<img src="https://placekitten.com/400/400">
 </body>
 </html>
